--- a/.github/workflows/python-test-package.yml
+++ b/.github/workflows/python-test-package.yml
@@ -39,3 +39,8 @@ jobs:
     - name: Test with pytest
       run: |
         hatch run +py=${{ matrix.python-version }} test:test --doctest-modules --junitxml=junit/test-results.xml
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
