--- a/.github/workflows/python-test-package.yml
+++ b/.github/workflows/python-test-package.yml
@@ -38,9 +38,8 @@ jobs:
     #    #flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        hatch run +py=${{ matrix.python-version }} test:test --doctest-modules --junitxml=junit/test-results.xml
+        hatch run +py=${{ matrix.python-version }} test:test-cov --doctest-modules --junitxml=junit/test-results.xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
