--- a/.github/workflows/python-test-package.yml
+++ b/.github/workflows/python-test-package.yml
@@ -41,5 +41,6 @@ jobs:
         hatch run +py=${{ matrix.python-version }} test:cov --doctest-modules --junitxml=junit/test-results.xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
